Доработка OpenAPI + HATEOAS. Улучшена валидация. Актуализированы тесты.